<resources>
    <string name="app_name">Shuffler</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_nav">Open</string>
    <string name="close_nav">Close</string>
    <string name="search">Search</string>
    <string name="greeting_string">Hello, [NAME]</string>
    <string name="calendar">Calendar</string>
    <string name="shuffle_content">Do you want to shuffle your books?</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="shuffle_calendar_message">You currently haven\'t set up your calendar. Input below the number of days before each book to set up your calendar.</string>
    <string name="home">Home</string>
    <string name="today_s_pick">Today\'s pick</string>
    <string name="prev">Prev</string>
    <string name="month">MONTH</string>
    <string name="next">Next</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="finished_reading">Finished reading</string>
    <string name="see_all">See All</string>
    <string name="my_books">My Books</string>
    <string name="calendar_subtitle">"You think your pain and your heartbreak are unprecedented in the history of the world, but then you read. It was books that taught me that the things that tormented me most were the very things that connected me with all the people who were alive, who had ever been alive."</string>
    <string name="placeholder_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </string>
    <string name="your_book_list_is_empty">Your book list is empty</string>
    <string name="go_to_search">Go to search</string>
    <string name="today">Today</string>
    <string name="discover">Discover</string>
    <string name="bookshelf">Bookshelf</string>
    <string name="populate_your_book_list">Populate your book list</string>
    <string name="image_description">Image description</string>
    <string name="year_published">Year Published: </string>
    <string name="subject">Subject:</string>
    <string name="add_to_list">Add to List</string>
    <string name="completed_bookshelf">You completed your bookshelf. Do you want to delete your existing progress and shuffle again?</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="delete_shelf">Delete Shelf</string>
    <string name="confirm_delete">Are you sure you want to delete this book from your shelf?</string>
    <string name="delete_bookshelf">Are you sure you want to delete all books in your bookshelf? This will empty out your calendar.</string>
    <string name="delete_book">Are you sure you want to delete the book %1$s by %2$s?</string>
    <string name="register">Register</string>
    <string name="network_problem_please_check_your_connection">Network Problem. Please Check your connection.</string>
    <string name="okay">Okay</string>
</resources>