<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/navHome"
            android:icon="@drawable/home_icon"
            android:title="@string/home"/>
        <item
            android:id="@+id/navSearch"
            android:icon="@drawable/search_icon"
            android:title="@string/search"/>
        <item
            android:id="@+id/navBookList"
            android:icon="@drawable/booklist_icon"
            android:title="@string/bookshelf"/>
        <item
            android:id="@+id/navCalendar"
            android:icon="@drawable/calendar_icon"
            android:title="@string/calendar"/>
    </group>
</menu>