<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.CalendarFragment"
    android:background="@color/black">
    <RelativeLayout
        android:background="@drawable/rounded_upper_corners_background"
        android:backgroundTint="@color/purple"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <TextView
        android:text="@string/calendar"
        android:id="@+id/calendarTitle"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="25sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/subtitle"
        android:text="@string/calendar_subtitle"
        android:textColor="@color/white"
        android:fontFamily="@font/opensans_regular"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calendarTitle"/>

    <RelativeLayout
        android:background="@drawable/rounded_upper_corners_background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginTop="20dp"
            android:id="@+id/layoutTop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <ImageButton
                android:contentDescription="@string/prev"
                android:id="@+id/prevKey"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/previous_icon"
                android:theme="@style/Base.Theme.Shuffler"
                app:layout_constraintEnd_toStartOf="@id/monthText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:id="@+id/monthText"
                android:text="@string/month"
                android:textSize="18sp"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <ImageButton
                android:contentDescription="@string/next"
                android:id="@+id/nextKey"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/next_icon"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/monthText"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/sunday"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/opensans_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/sun"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/monthText" />

            <TextView
                android:id="@+id/monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_regular"
                android:text="@string/mon"
                app:layout_constraintBottom_toBottomOf="@+id/sunday"
                app:layout_constraintEnd_toStartOf="@id/tue"
                app:layout_constraintStart_toEndOf="@id/sunday"
                app:layout_constraintTop_toTopOf="@+id/sunday" />

            <TextView
                android:id="@+id/tue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_regular"
                android:text="@string/tue"
                app:layout_constraintBottom_toBottomOf="@+id/monday"
                app:layout_constraintEnd_toStartOf="@+id/wednesday"
                app:layout_constraintStart_toEndOf="@id/monday"
                app:layout_constraintTop_toTopOf="@+id/monday" />

            <TextView
                android:id="@+id/wednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_regular"
                android:text="@string/wed"
                app:layout_constraintBottom_toBottomOf="@+id/tue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tue" />

            <TextView
                android:id="@+id/thursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_regular"
                android:text="@string/thu"
                app:layout_constraintBottom_toBottomOf="@+id/wednesday"
                app:layout_constraintEnd_toStartOf="@id/friday"
                app:layout_constraintStart_toEndOf="@+id/wednesday"
                app:layout_constraintTop_toTopOf="@+id/wednesday" />

            <TextView
                android:id="@+id/friday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_regular"
                android:text="@string/fri"
                app:layout_constraintBottom_toBottomOf="@+id/thursday"
                app:layout_constraintEnd_toStartOf="@id/saturday"
                app:layout_constraintStart_toEndOf="@id/thursday"
                app:layout_constraintTop_toTopOf="@+id/thursday" />

            <TextView
                android:id="@+id/saturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_regular"
                android:text="@string/sat"
                app:layout_constraintBottom_toBottomOf="@+id/friday"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/friday"
                app:layout_constraintTop_toTopOf="@+id/friday" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/calendarView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:padding="10dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="7"
                tools:listitem="@layout/layout_calendar_item"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/monday"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
