<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_gravity="center"
            android:src="@drawable/img"
            android:layout_width="250dp"
            android:layout_height="250dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shuffle_content"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:text="@string/cancel" />
            <Button
                android:text="@string/confirm"
                android:layout_gravity="center"
                android:layout_width="100dp"
                android:layout_height="50dp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>