<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.HomeFragment"
    android:background="@color/white">
    <androidx.cardview.widget.CardView
        android:layout_margin="30dp"
        app:cardCornerRadius="10dp"
        android:id="@+id/cardLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:text="@string/today_s_pick"
                android:textSize="20sp" />
            <androidx.cardview.widget.CardView
                app:cardCornerRadius="10dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/bookCover"
                    android:layout_width="130dp"
                    android:layout_height="200dp"/>
            </androidx.cardview.widget.CardView>
            <TextView
                android:id="@+id/bookTitle"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_margin="10dp"
                android:fontFamily="@font/montserrat_bold"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/addedBooksText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/my_books"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        android:textSize="15sp"
        android:fontFamily="@font/montserrat_bold"
        app:layout_constraintTop_toBottomOf="@id/cardLayout"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/userBooksSeeAll"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/see_all"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="12sp"
        android:textColor="#283d74"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toTopOf="@id/addedBooksText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/addedBooksText"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/homeUserBookList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        tools:listitem="@layout/layout_user_books_home"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/addedBooksText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>