<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:layout_margin="2dp"
            android:id="@+id/cardImage"
            app:cardCornerRadius="10dp"
            android:elevation="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <ImageView
                android:contentDescription="@string/image_description"
                android:id="@+id/bookImage"
                android:layout_width="150dp"
                android:layout_height="220dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/bookTitle"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/montserrat_bold"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/cardImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/cardImage"/>
        <TextView
            android:id="@+id/bookAuthor"
            android:textSize="15sp"
            android:textStyle="italic"
            android:fontFamily="@font/montserrat_regular"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/cardImage"
            app:layout_constraintTop_toBottomOf="@id/bookTitle"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/publishedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year_published"
            android:textSize="15sp"
            android:fontFamily="@font/montserrat_regular"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/bookAuthor"
            app:layout_constraintStart_toEndOf="@id/cardImage" />
        <TextView
            android:id="@+id/bookPublished"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:fontFamily="@font/montserrat_regular"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@id/bookAuthor"
            app:layout_constraintStart_toEndOf="@id/publishedText"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/subjectText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subject"
            android:textSize="15sp"
            android:fontFamily="@font/montserrat_regular"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@id/publishedText"
            app:layout_constraintStart_toEndOf="@id/cardImage" />
        <TextView
            android:id="@+id/bookSubject"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:fontFamily="@font/montserrat_regular"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@id/subjectText"
            app:layout_constraintStart_toEndOf="@id/cardImage"
            app:layout_constraintEnd_toEndOf="parent"/>
        <Button
            android:id="@+id/buttonAddToList"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/add_to_list"
            android:background="@drawable/button_background"
            android:fontFamily="@font/montserrat_regular"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/bookSubject"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cardImage" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>